<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.HelpFragment">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/header_crisis_number"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/numberTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numberTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/header_crisis_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/callButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/textButton"
        android:backgroundTint="@color/reach_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:paddingHorizontal="72dp"
        android:paddingVertical="16dp"
        android:text="@string/label_text_button"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/callButton"
        android:backgroundTint="@color/reach_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:paddingHorizontal="72dp"
        android:paddingVertical="16dp"
        android:text="@string/label_call_button"
        android:textStyle="bold"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textButton"
        app:layout_constraintStart_toStartOf="@+id/textButton" />

    <ImageView
        android:id="@+id/emergencyWatermark"
        android:layout_width="399dp"
        android:layout_height="291dp"
        android:layout_marginBottom="104dp"
        android:alpha=".15"
        android:src="@drawable/ic_emergency"
        app:layout_constraintBottom_toTopOf="@+id/callButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/reach_red" />


</androidx.constraintlayout.widget.ConstraintLayout>